# qwe

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
cli/: main.py
cli/commands/: exp.py  run.py  show.py
config/: defaults.toml  example.setting.json
core/: config_loader.py  generator.py  history.py  prompts.py  validator.py
core/engine/: executor.py  generator.py  validator.py
core/generation_backends/: google_genai.py
gensh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
