[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gensh-cli"
version = "0.1.0"
description = "Natural-language to shell command converter Grok API"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Abishek S", email = "your-email@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-generativeai>=0.1.0"
]
keywords = ["CLI", "shell", "generator", "automation"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli", "cli.*", "core", "core.*"]

[project.scripts]
gensh = "cli.main:main"
